data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_645.wast
;; 6. A test with a `block` that includes `nop` and then exits using a `br` instruction that attempts to pass a value, causing a type mismatch.

(assert_invalid
  (module
    (func (block
      nop
      (br 0 (i32.const 1))
    ))
  )
  "type mismatch"
)